# sit-aw-anchoring

./: .bashrc  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh
docs/source/: conf.py  generic_principles.rst  index.rst  installation.rst  tutorials.rst
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: activate_launch.py
src/bringup/launch/cfg/: params.yaml
src/digital_twin_integrator/: .project  package.xml  setup.cfg  setup.py
src/digital_twin_integrator/digital_twin_integrator/digital_twin_integrator_component_definition/: __init__.py  digital_twin_integrator.py  digital_twin_integrator_impl.py  digital_twin_integrator_impl_skel.py  digital_twin_integrator_main.py
src/digital_twin_integrator/digital_twin_integrator/digital_twin_integrator_component_definition/func/: integrator.py  utils.py
src/digital_twin_integrator_msgs/: .project  CMakeLists.txt  package.xml
src/digital_twin_integrator_msgs/action/: DigitalTwinIntegratorUpdateState.action  GetData.action  TestGraspability.action
src/digital_twin_integrator_msgs/msg/: EntityData.msg
src/ontology_management_msgs/: .project  CMakeLists.txt  package.xml
src/ontology_management_msgs/action/: GetOntologyCS.action  PopulateInstances.action  ValidateSetOntologyCS.action
src/ontology_management_msgs/srv/: ExecuteCommands.srv
src/ontology_manager/: .cproject  .project  package.xml  setup.cfg  setup.py
src/ontology_manager/models/components/: ontology_manager.compdef.notation  ontology_manager.compdef.uml
src/ontology_manager/ontology_manager/ontology_manager_component_definition/: ontology_manager.py  ontology_manager_impl.py  ontology_manager_impl_skel.py  ontology_manager_main.py
src/ontology_manager/ontology_manager/ontology_manager_component_definition/func/: populator.py  rulemaker.py  utils.py  validate_set_ontology.py
src/process_msgs/: .project  CMakeLists.txt  package.xml
src/process_msgs/msg/: Progress.msg  Result.msg
tests/: DT_config.json  setup_populator_0.json  setupfile.md  synthetic_DT_Data_0.json
tests/ontology/: Anchology_design.rdf
utils/: export_fastrtps.sh
